# autoware_perception_evaluation

./: .cspell.json  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  README.md  analyze_annotationless_perception.py  analyze_perception.py  pyproject.toml  requirements.txt  setup.cfg  show_fail_data.py
.github/: .cspell-addition.json  (+2 more)
awml_evaluation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
awml_evaluation/awml_evaluation/: __init__.py  configure.py  evaluation_config.py  evaluation_manager.py  perception_evaluation_config.py  perception_evaluation_manager.py  sensing_evaluation_config.py  sensing_evaluation_manager.py
awml_evaluation/awml_evaluation/common/: dataset.py  evaluation_task.py  label.py  object.py  point.py  status.py  threshold.py
awml_evaluation/awml_evaluation/config/: _evaluation_config_base.py  perception_evaluation_config.py  sensing_evaluation_config.py
awml_evaluation/awml_evaluation/evaluation/: frame_result.py  object_result.py
awml_evaluation/awml_evaluation/evaluation/matching/: matching.py  object_matching.py  objects_filter.py
awml_evaluation/awml_evaluation/evaluation/metrics/: configure.py  metrics.py  metrics_config.py  metrics_score_config.py
awml_evaluation/awml_evaluation/evaluation/result/: frame_result.py  object_result.py  pass_fail_config.py  pass_fail_result.py  perception_frame_config.py  perception_frame_result.py  perception_pass_fail_result.py
awml_evaluation/awml_evaluation/evaluation/sensing/: sensing_frame_config.py  sensing_frame_result.py  sensing_result.py
awml_evaluation/awml_evaluation/manager/: _evaluation_manager_base.py  perception_evaluation_manager.py  sensing_evaluation_manager.py
awml_evaluation/awml_evaluation/tool/: __init__.py  perception_performance_analyzer.py  utils.py
awml_evaluation/awml_evaluation/util/: debug.py  file.py  logger_config.py  math.py
awml_evaluation/awml_evaluation/visualization/: color.py  eda_tool.py  edatool.py  perception_visualization_config.py  perception_visualizer.py  visualization.py  visualization_config.py
awml_evaluation/test/: eda.py  lsim.py  perception_lsim.py  sensing_lsim.py  test_copyright.py  test_flake8.py  test_pep257.py
awml_evaluation/test/common/: test_label.py  test_object.py  test_point.py  test_threshold.py
awml_evaluation/test/config/: test_perception_evaluation_config.py  test_sensing_evaluation_config.py
awml_evaluation/test/evaluation/matching/: test_objects_filter.py
awml_evaluation/test/evaluation/metrics/: test_metrics_score_config.py
awml_evaluation/test/evaluation/result/: test_object_result.py
awml_evaluation/test/evaluation/sensing/: test_sensing_result.py
awml_evaluation/test/matching/: test_object_matching.py  test_objects_filter.py
awml_evaluation/test/metrics/: test_ap.py  test_iou.py  test_iou_3d.py  test_map.py
awml_evaluation/test/util/: dummy_object.py  object_diff.py  test_math.py
awml_evaluation/test/visualization/: test_eda_tool.py  test_edatool.py
perception_eval/: CMakeLists.txt  package.xml  ros_requirements.txt
perception_eval/perception_eval/: __init__.py  consts.py
perception_eval/perception_eval/common/: __init__.py  dataset.py  dataset_utils.py  deepcopy.py  evaluation_task.py  geometry.py  label.py  object.py  object2d.py  object_base.py  point.py  roi.py  schema.py  shape.py  state.py  status.py  threshold.py  traffic_light.py  transform.py
perception_eval/perception_eval/config/: __init__.py  _evaluation_config_base.py  evaluation_config_base.py  perception_evaluation_config.py  sensing_evaluation_config.py
perception_eval/perception_eval/dataset/: ground_truth.py  load.py  utils.py
perception_eval/perception_eval/evaluation/: __init__.py
perception_eval/perception_eval/manager/: __init__.py  _evaluation_manager_base.py  evaluation_manager_base.py  perception_evaluation_manager.py  sensing_evaluation_manager.py
perception_eval/perception_eval/matching/: __init__.py  matching_policy.py  object_matching.py  objects_filter.py
perception_eval/perception_eval/metrics/: __init__.py  metrics.py  metrics_score_config.py  tp_metrics.py
perception_eval/perception_eval/object/: __init__.py  object2d.py  object3d.py
perception_eval/perception_eval/result/: __init__.py
perception_eval/perception_eval/tool/: __init__.py  gmm.py  perception_analyzer2d.py  perception_analyzer3d.py  perception_analyzer3d_field.py  perception_analyzer3dfield.py  perception_analyzer_base.py  perception_field_analyze.py  perception_performance_analyzer.py  utils.py
perception_eval/perception_eval/util/: __init__.py  aggregation_results.py  debug.py  file.py  logger.py  logger_config.py  math.py
perception_eval/perception_eval/visualization/: __init__.py  color.py  detection_confusion_matrix.py  eda_tool.py  perception_visualization_config.py  perception_visualizer.py  perception_visualizer2d.py  perception_visualizer3d.py  perception_visualizer3dfield.py  sensing_visualizer.py
perception_eval/test/: eda.py  fp_validation_lsim.py  perception_detected_objects.py  perception_field_analysis.py  perception_field_points_analysis.py  perception_fp_validation_lsim.py  perception_lsim.py  perception_lsim2d.py  sensing_lsim.py  test_copyright.py  test_flake8.py  test_pep257.py
perception_eval/test/common/: test_geometry.py  test_label.py  test_object.py  test_point.py  test_threshold.py  test_transform.py
perception_eval/test/config/: test_perception_evaluation_config.py  test_sensing_evaluation_config.py
perception_eval/test/matching/: test_objects_filter.py
perception_eval/test/metrics/: test_metrics_score_config.py
perception_eval/test/object/: test_object.py
perception_eval/test/result/: test_object_result.py  test_sensing_result.py
perception_eval/test/sample_data/: scenario.yaml
perception_eval/test/tool/: test_gmm.py  test_perception_analyzer2d.py  test_perception_analyzer3d.py  test_perception_performance_analyzer.py
perception_eval/test/util/: dummy_object.py  object_diff.py  test_math.py
perception_eval/test/visualization/: test_eda_tool.py
(+225 files in other folders)
