[tool.poetry]
name = "perception_eval"
version = "1.0.5"
description = ""
authors = ["Satoshi Tanaka <satoshi.tanaka@tier4.jp>", "Kotaro Uetake <kotaro.uetake@tier4.jp>", "Shunsuke Miura <shunsuke.miura@tier4.jp>", "Shintaro Tomie <shinrato.tomie@tier4.jp>"]
license = "Apache-2.0"
packages = [
  { include = "perception_eval", from = "perception_eval"},
]

[tool.poetry.dependencies]
python = ">=3.7.11,<3.11"
nuscenes-devkit = "^1.1.9"
tqdm = "^4.62.3"
plotly = "^5.9.0"
pandas = [
    {version="<1.4", python=">=3.7.11,<3.8"},
    {version="*", python=">=3.8,<3.11"}
]
pandas-profiling = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
isort = "^5.9.3"
pre-commit = "^2.10"
pytest = "^7.1.2"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100
