# cspell: ignore Shunsuke Miura, Shintaro Tomie
[tool.poetry]
name = "perception_eval"
version = "1.1.3"
description = ""
authors = [
  "Satoshi Tanaka <satoshi.tanaka@tier4.jp>",
  "Kotaro Uetake <kotaro.uetake@tier4.jp>",
  "Shunsuke Miura <shunsuke.miura@tier4.jp>",
  "Shintaro Tomie <shinrato.tomie@tier4.jp>",
]
license = "Apache-2.0"
packages = [{ include = "perception_eval", from = "perception_eval" }]

[tool.poetry.dependencies]
python = ">=3.7.11,<3.11"
nuscenes-devkit = "^1.1.9"
tqdm = "^4.62.3"
plotly = "^5.9.0"
pandas = [
  { version = "<1.4", python = ">=3.7.11,<3.8" },
  { version = "*", python = ">=3.8,<3.11" },
]
pandas-profiling = "^3.5.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
ruff = "^0.0.292"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
show-source = true
select = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "ISC",
    "NPY",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
ignore = [
    "Q000",
    "ANN101",
    "ANN102",
    "ANN401",
    "PGH004",
    "E501",
    "PLR0913",
    "S101",
    "S301",
    "S602",
    "SIM115",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D212",
    "D404",
    "D417",
    "N806",
]
fixable = ["D", "I", "ANN", "COM", "EXE", "PIE"]


[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
norecursedirs = ["docs", ".tox"]
addopts = """
    -vv
    -rw
    --cache-clear
    """
