# # cspell: ignore Shunsuke Miura, Shintaro Tomie, Masato Saeki
[project]
name = "perception_eval"
version = "1.3.1"
description = ""
authors = [
  { name = "Satoshi Tanaka", email = "satoshi.tanaka@tier4.jp" },
  { name = "Kotaro Uetake", email = "kotaro.uetake@tier4.jp" },
  { name = "Shunsuke Miura", email = "shunsuke.miura@tier4.jp" },
  { name = "Shintaro Tomie", email = "shinrato.tomie@tier4.jp" },
  { name = "Masato Saeki", email = "masato.saeki@tier4.jp" },
]
license = "Apache-2.0"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy<2.0.0",
  "nuscenes-devkit>=1.1.9,<1.2.0",
  "plotly>=6.1.2",
  "setuptools>=80.9.0",
  "tqdm>=4.67.1",
  "ydata-profiling>=4.16.1",
  "shapely<2.0.0; python_version=='3.10'",
  "shapely>=2.0.0; python_version>'3.10'",
]

[dependency-groups]
dev = [
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "pytest-mock>=3.14.0",
  "pytest-cov>=6.0.0",
  "lark>=1.1.9",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.47",
  "mkdocstrings[python]>=0.18",
  "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["perception_eval/perception_eval"]

[tool.ruff]
line-length = 100
