<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>awml_evaluation</name>
  <version>1.3.1</version>
  <description>Autoware Machine Learning Evaluator</description>
  <author email="satoshi.tanaka@tier4.jp">Satoshi Tanaka</author>
  <maintainer email="satoshi.tanaka@tier4.jp">Satoshi Tanaka</maintainer>
  <license>Apache V2</license>

  <exec_depend>python3-nuscenes-devkit-pip</exec_depend>
  <exec_depend>python3-tqdm</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
